--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,22 @@
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   </head>
   <body>
+    <div id="system-status-panel">
+      <h3>Durum</h3>
+      <div>
+        <div>HP:</div>
+        <div class="status-bar">
+          <div class="status-bar-inner" style="width: 80%"></div>
+        </div>
+        <div>XP: 12</div>
+        <div>Altın: 50</div>
+        <div>Envanter:</div>
+        <ul>
+          <li>Elma</li>
+          <li>İksir</li>
+        </ul>
+      </div>
+    </div>
     <div class="container">
       <div class="welcome">
         <h1>🧙‍♂️ AI Dungeon Master</h1>
